# rust-key-manager

./: .gitignore  PROPOSAL.md  README.md
backend/: Cargo.toml  example.env
backend/src/: main.rs  middleware.rs  scheduler.rs
backend/src/database/: migration.sql
backend/src/db/: models.rs  set_db.sql
backend/src/models/: claims.rs  key.rs  mod.rs  reset_password.rs  user.rs  utils.rs  validate.rs
backend/src/routes/: auth.rs  health.rs  keys.rs  mod.rs  users.rs  utils.rs
backend/src/services/: email.rs  email_sender_service.rs  encryption.rs  key_service.rs  mod.rs  password_reset_service.rs  utils_service.rs
backend/src/utils/: constants.rs  mod.rs  validation.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/components/: app_router.rs
frontend/src/constants/: key_types.rs  mod.rs
frontend/src/context/: user_context.rs
frontend/src/helpers/: error_codes.rs  mod.rs  storage.rs  string_utils.rs
frontend/src/models/: key.rs  user.rs
frontend/src/pages/: add_key.rs  add_menu.rs  change_pwd.rs  dashboard.rs  expired.rs  key_detail.rs  login.rs  mod.rs  not_found.rs  register.rs  revoked.rs  settings.rs  signup.rs
frontend/src/services/: auth.rs  keys.rs
