[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "time"] }
dotenv = "0.15.0"

bcrypt = "0.15.0"
jsonwebtoken = "7.2"
