[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "time", "chrono"] }
dotenv = "0.15.0"

bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"

uuid = "1.1.2"
chrono = { version = "0.4.40", features = ["serde"] }
ring = "0.17.14"

lettre = "0.11.15" # For sending email, to reset password
